refactored widget creation, callbacks, and widget global storage

--- a/robust_statistics_simulator/standard_error.ipynb
+++ b/robust_statistics_simulator/standard_error.ipynb
@@ -6,14 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import simulation"
+    "import os\n",
+    "\n",
+    " # here for now to set proper path on my system, but will not be needed when underlying code is a library\n",
+    "os.chdir('..')\n",
+    "\n",
+    "from scipy.stats import lognorm, norm,gaussian_kde,chi2\n",
+    "import numpy as np\n",
+    "import simulation\n",
+    "import altair as alt\n",
+    "import pandas as pd\n",
+    "alt.data_transformers.disable_max_rows();"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Population"
+    "# Population Characteristics"
    ]
   },
   {
@@ -24,12 +34,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4d62e6bac2540a79cc70d864767b6a9",
+       "model_id": "9e2afc89c3434a8e9ca3064d1800ae94",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Output(layout=Layout(height='300px', width='1000px')), Dropdown(description='Shape', layout=Lay…"
+       "HBox(children=(VBox(children=(Dropdown(description='Shape', index=1, layout=Layout(width='300px'), options=('n…"
       ]
      },
      "metadata": {},
@@ -44,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sampling distribution"
+    "# Sampling distribution of the Population"
    ]
   },
   {
@@ -55,12 +65,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f20d4a1f91d453e9f1bb865f70893ef",
+       "model_id": "ea266c02505346e084aafa1185206fec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Output(), Dropdown(description='Estimator', layout=Layout(margin='50px 0px 10px 0px'), options=…"
+       "HBox(children=(VBox(children=(Dropdown(description='Estimator', options=(('mean', {'func': <function mean at 0…"
       ]
      },
      "metadata": {},
