comparison section created

--- a/robust_statistics_simulator/standard_error.ipynb
+++ b/robust_statistics_simulator/standard_error.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e2afc89c3434a8e9ca3064d1800ae94",
+       "model_id": "bb222a10e116494e944ec6b9776cab66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea266c02505346e084aafa1185206fec",
+       "model_id": "db15f973ccdb4385b24e91fbd322bbae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,6 +79,30 @@
    ],
    "source": [
     "simulation.sampling_distribution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89a742a3b1104bce9e6030b42f4b4742",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(description='run comparisons', layout=Layout(width='auto'), style=ButtonStyle()), Output…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "simulation.comparisons()"
    ]
   }
  ],
