added type I error features

--- a/robust_statistics_simulator/standard_error.ipynb
+++ b/robust_statistics_simulator/standard_error.ipynb
@@ -82,6 +82,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compare the standard error for each estimator and distribution\n",
+    "\n",
+    "- `variance` is not included as its SE is so large that it dominates the results\n",
+    "- default parameters are used (i.e., the sample size and slider values that are the initial settings for the charts above)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
