type I error comparisons

--- a/robust_statistics_simulator/type_one_error.ipynb
+++ b/robust_statistics_simulator/type_one_error.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd622d9069e845219192506c1387302e",
+       "model_id": "1f4f68d7fe2043ce850fba8e362cc979",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1eb89927e18042d3b75fc1b6d400150e",
+       "model_id": "1a9778d0df4047f3a019ed230b2c62ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,6 +72,30 @@
    ],
    "source": [
     "simulation.t_sampling_distribution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f04d79bbb18434a8904bebc6a26db3f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(IntSlider(value=30, description='Sample size', max=300, min=1), Button(descripti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "simulation.type_I_error()"
    ]
   }
  ],
