added doc files

--- a/robust_statistics_simulator/standard_error.ipynb
+++ b/robust_statistics_simulator/standard_error.ipynb
@@ -16,7 +16,9 @@
     "import simulation\n",
     "import altair as alt\n",
     "import pandas as pd\n",
-    "alt.data_transformers.disable_max_rows();"
+    "alt.data_transformers.disable_max_rows();\n",
+    "\n",
+    "%load_ext line_profiler"
    ]
   },
   {
@@ -34,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ef3b088602e4edca14fda04753bb4d6",
+       "model_id": "a618068552a3405a96883c9fb1875a57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "921e116d78ef45fdb674b7534c3a2183",
+       "model_id": "ae37cd3e28b94e9a93bb2e66c5c6329e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9f17c0b55d041878e8b29e2b1e957d0",
+       "model_id": "dab7cae3341a4078acfcdf836e05a852",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
