--- a/robust_statistics_simulator/standard_error.ipynb
+++ b/robust_statistics_simulator/standard_error.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -12,6 +16,7 @@
     "os.chdir('..')\n",
     "\n",
     "from scipy.stats import lognorm, norm,gaussian_kde,chi2\n",
+    "from scipy.stats import trim_mean\n",
     "import numpy as np\n",
     "import simulation\n",
     "import altair as alt\n",
@@ -31,12 +36,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a618068552a3405a96883c9fb1875a57",
+       "model_id": "2e4ba974cb5c4b72967f17de072ec255",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,18 +65,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sampling distribution of the Population"
+    "# Sampling distribution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae37cd3e28b94e9a93bb2e66c5c6329e",
+       "model_id": "62f32244d2904443b771b829cfd61e00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,12 +109,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dab7cae3341a4078acfcdf836e05a852",
+       "model_id": "fc1ef4ab4c84478bac4108250b0f675c",
        "version_major": 2,
        "version_minor": 0
       },
